  in css.
  [demarant fixes #20690]
* Change: removed FontAwesome declaration from presentation_styles.css
  now that we have eea-icons.css
  [ichimdav refs 21149]
* Bug fix: Fix Font-Awesome icons within PDFs generated with wkhtmltopdf
  [voineali refs #21149]
* Bug fix: fixed 404 message for PDF download when context is not published.
  [ghicaale refs #21253]

10.6 - (2014-10-01)
-------------------
* Change: no longer show the restore dialog if the modification date of object
  is greater than that of the form restore data
  [ichimdav refs #21127]
* Change: rememberstate no longer saves the DavizVisualization contenttype
  [ichimdav refs #21127]
* Change: modified wording of info message letting the user know that the form
  has been modified between the time of the restoration date and now for the
  eea-rememberstate plugin
  [ichimdav]
* Bug fix: fixed the display of the date of restoration date by display it
  from the Date object instead of cutting off values from the date string
  for the eea-rememberstate plugin
  [ichimdav]
* Bug fix: only save form input when the save button is clicked within
  eea-rememberstate since cancel triggers the form submit event
  [ichimdav]
* Feature: added custom 404 message for PDF download in-progress
  [ghicaale refs #20972]

10.5 - (2014-09-15)
-------------------
* Bug fix: fixed extension identification for links with arguments
  [pasoviul refs #19537]
* Bug fix: fixed PDF/print line-height altered by sup/sub tags
  [demarant refs #20996]
* Bug fix: fixed design issues regarding box sizes within portal-column-two
  [ichimdav refs #20873]
* Feature: Avoid multiple clicks within document actions (download as PDF, etc.)
  [voineali refs #20842]
* Feature: added custom 404 message for PDF download
  [ghicaale refs #20972]

10.4 - (2014-08-27)
-------------------
* Upgrade step: within "Plone > Site setup > Add-ons" click on upgrade button
  available for eea.design
  [ichimdav refs #20302]