@@ -1,5 +1,4 @@
 (function($) {
-
     // These regexps are stolen from match_special_links.js
     // http://domain/LL/....
     var langregex1 = new RegExp("(http://[a-z0-9.:]*)/(aa|ab|af|am|ar|as|ay|az|ba|be|bg|bh|bi|bn|bo|bs|br|ca|ch|co|cs|cy|da|de|dz|el|en|eo|es|et|eu|fa|fi|fj|fo|fr|fy|ga|gd|gl|gn|gu|gv|ha|he|hi|hr|hu|hy|ia|id|ie|ik|is|it|iu|ja|jbo|jw|ka|kk|kl|km|kn|ko|ks|ku|kw|ky|la|lb|li|ln|lo|lt|lv|mg|mi|mk|ml|mn|mo|mr|ms|mt|my|na|ne|nl|no|nn|oc|om|or|pa|pl|ps|pt|qu|rm|rn|ro|ru|rw|sa|sd|se|sg|sh|si|sk|sl|sm|sn|so|sq|sr|ss|st|su|sv|sw|ta|te|tg|th|ti|tk|tl|tn|to|tr|ts|tt|tw|ug|uk|ur|uz|vi|vo|wa|wo|xh|yi|yo|za|zh|zu)/.*");
@@ -24,7 +23,7 @@
             }
             var article_lang = buttonID === "article-language";
             var networks_panel = buttonID === "externalsites-networks";
-            
+
             if (tooltip.length > 0) {
                 a.attr("title","").attr("href", "#");
 
@@ -61,11 +60,11 @@
                             left: ''
                         });
                     }
-                    
+
                     if(networks_panel) {
                         $("#tip-externalsites-networks").css('margin-left', '2em');
                     }
-                    
+
                     tooltip.fadeIn('fast');
                 });
             }
@@ -80,19 +79,11 @@
             if (!target.is('#cross-site-top a,  #cross-site-top .panel, #article-language a') && !target.parents('.panel').length) {
                 panels.fadeOut('fast');
             }
-	    });
+        });
 
         $("#portal-siteactions a").each(panel);
         $("#portal-externalsites a").each(panel);
         $("#article-language").find('a').each(panel);
         $("#tip-externalsites-networks").find(".externalsites a").each(panel);
-        // since we use the standard events_portlet, we can't place the
-        // submit-event-link in its footer initially
-        var footer = $("#tip-siteaction-events .portletFooter");
-        var submitLink = $("#tip-siteaction-events #submit-event-link");
-        submitLink.remove().css('margin-right', '0.5em');
-        footer.prepend(submitLink);
     });
 }(jQuery));
-
-
